# backend_golang/docs/swagger.yaml
@@ -247,6 +247,9 @@ definitions:
     type: object
   ent.PInfo:
     properties:
+      about:
+        description: About holds the value of the "about" field.
+        type: string
       address:
         description: Address holds the value of the "address" field.
         type: string
@@ -275,6 +278,12 @@ definitions:
         type: string
       lastName:
         description: LastName holds the value of the "lastName" field.
+        type: string
+      prefix:
+        description: Prefix holds the value of the "prefix" field.
+        type: string
+      profile:
+        description: Profile holds the value of the "profile" field.
         type: string
     type: object
   ent.PInfoEdges:
